[project]
name = "vacares"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "mcp[cli]>=1.12.3",
    "openai-agents>=0.2.4",
    "pandas>=2.3.1",
    "streamlit>=1.47.1",
    "wwo-hist>=0.0.7",
]
